[gd_scene load_steps=29 format=3 uid="uid://by7napo7uhogq"]

[ext_resource type="Script" uid="uid://52hhmmwfyok7" path="res://scenes/game.gd" id="1_iywne"]
[ext_resource type="PackedScene" path="res://scenes/ui.tscn" id="2_0tnpc"]
[ext_resource type="PackedScene" uid="uid://iu2i20icpjiu" path="res://entities/player/player.tscn" id="2_p57ef"]
[ext_resource type="Script" uid="uid://bnhiujpo84owt" path="res://scenes/world.gd" id="2_u5sy4"]
[ext_resource type="Script" uid="uid://b3d3152u4ku07" path="res://items/item.gd" id="4_rysoc"]
[ext_resource type="Script" uid="uid://ddsmk3umtytif" path="res://scripts/map.gd" id="5_0tnpc"]
[ext_resource type="Resource" uid="uid://1mxmgi5b47nt" path="res://items/basic_potion.tres" id="5_kvuet"]
[ext_resource type="TileSet" uid="uid://hennwlx7g0g4" path="res://assets/biscuit_tiles.tres" id="5_p57ef"]
[ext_resource type="Script" uid="uid://cf4n0rsas64lj" path="res://items/health_item.gd" id="5_ssvqc"]
[ext_resource type="Script" uid="uid://dlm8eeyt0nr11" path="res://scripts/stats/stat.gd" id="5_vtaks"]
[ext_resource type="Texture2D" uid="uid://bdfc5n7ynus71" path="res://assets/health_potion.png" id="6_264po"]
[ext_resource type="Script" uid="uid://cdont5dqir2xk" path="res://scripts/stats/character_stats.gd" id="6_kvpfn"]
[ext_resource type="Script" uid="uid://cw0vu353hkrdw" path="res://items/weapon_item.gd" id="7_1kice"]
[ext_resource type="Texture2D" uid="uid://p8so4riqyj0p" path="res://assets/ui/damage.png" id="8_5newe"]
[ext_resource type="Shader" uid="uid://cjygb6yl3te0b" path="res://shader/transition.gdshader" id="9_0tnpc"]
[ext_resource type="PackedScene" uid="uid://bhn6k1e3wei8k" path="res://scenes/level_transition.tscn" id="11_kvpfn"]
[ext_resource type="Script" path="res://scenes/frame_buffer.gd" id="12_dinhu"]

[sub_resource type="Resource" id="Resource_bt5mj"]
script = ExtResource("5_ssvqc")
heal_amount = 3
texture = ExtResource("6_264po")
metadata/_custom_type_script = "uid://cf4n0rsas64lj"

[sub_resource type="Resource" id="Resource_e1j6l"]
script = ExtResource("7_1kice")
strength_amount = 8
texture = ExtResource("8_5newe")
metadata/_custom_type_script = "uid://cw0vu353hkrdw"

[sub_resource type="Resource" id="Resource_rysoc"]
script = ExtResource("7_1kice")
strength_amount = 8
texture = ExtResource("8_5newe")
metadata/_custom_type_script = "uid://cw0vu353hkrdw"

[sub_resource type="Resource" id="Resource_dinhu"]
script = ExtResource("5_vtaks")
baseValue = 0
metadata/_custom_type_script = "uid://dlm8eeyt0nr11"

[sub_resource type="Resource" id="Resource_kvuet"]
script = ExtResource("5_vtaks")
baseValue = 10
metadata/_custom_type_script = "uid://dlm8eeyt0nr11"

[sub_resource type="Resource" id="Resource_trtic"]
script = ExtResource("5_vtaks")
baseValue = 0
metadata/_custom_type_script = "uid://dlm8eeyt0nr11"

[sub_resource type="Resource" id="Resource_ir15t"]
script = ExtResource("5_vtaks")
baseValue = 1
metadata/_custom_type_script = "uid://dlm8eeyt0nr11"

[sub_resource type="Resource" id="Resource_ca42v"]
script = ExtResource("6_kvpfn")
health = SubResource("Resource_kvuet")
strength = SubResource("Resource_ir15t")
defense = SubResource("Resource_dinhu")
speed = SubResource("Resource_trtic")
metadata/_custom_type_script = "uid://cdont5dqir2xk"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vtaks"]
shader = ExtResource("9_0tnpc")
shader_parameter/AspectRatio = 1.0
shader_parameter/Diamonds = 18.0
shader_parameter/pixel_size = 0.08
shader_parameter/height = -1.0
shader_parameter/disable_pixel = false
shader_parameter/final_color = Color(0.133333, 0.137255, 0.137255, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_gee14"]
viewport_path = NodePath("World")

[sub_resource type="ViewportTexture" id="ViewportTexture_vtaks"]
viewport_path = NodePath("UIViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_u5sy4"]
viewport_path = NodePath("SubViewport")

[node name="Game" type="Node2D"]
script = ExtResource("1_iywne")

[node name="UIViewport" type="SubViewport" parent="."]
size = Vector2i(80, 180)

[node name="UI" parent="UIViewport" instance=ExtResource("2_0tnpc")]

[node name="World" type="SubViewport" parent="."]
size = Vector2i(240, 180)
script = ExtResource("2_u5sy4")
chest_items = Array[ExtResource("4_rysoc")]([SubResource("Resource_bt5mj"), SubResource("Resource_e1j6l"), SubResource("Resource_rysoc")])
modifiers = null

[node name="BackgroundCanvas" type="CanvasLayer" parent="World"]
layer = -1

[node name="Background" type="ColorRect" parent="World/BackgroundCanvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.39, 0.39, 0.39, 1)

[node name="Player" parent="World" instance=ExtResource("2_p57ef")]
position = Vector2(10, 20)
stats = SubResource("Resource_ca42v")

[node name="ProcMap" type="TileMapLayer" parent="World"]
z_index = -1
tile_set = ExtResource("5_p57ef")
script = ExtResource("5_0tnpc")

[node name="CardsCanvas" type="CanvasLayer" parent="World"]
visible = false

[node name="Background" type="ColorRect" parent="World/CardsCanvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133333, 0.137255, 0.137255, 1)

[node name="Cards" parent="World/CardsCanvas" instance=ExtResource("11_kvpfn")]
offset_right = 0.0
offset_bottom = 0.0
mouse_filter = 2

[node name="EffectsCanvas" type="CanvasLayer" parent="World"]

[node name="Transition" type="ColorRect" parent="World/EffectsCanvas"]
material = SubResource("ShaderMaterial_vtaks")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.133333, 0.137255, 0.137255, 1)

[node name="Camera" type="Camera2D" parent="World"]
position = Vector2(10, 10)

[node name="SubViewport" type="SubViewport" parent="."]
size = Vector2i(320, 180)

[node name="WorldTexture" type="TextureRect" parent="SubViewport"]
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("ViewportTexture_gee14")

[node name="UITexture" type="TextureRect" parent="SubViewport"]
offset_left = 240.0
offset_right = 320.0
offset_bottom = 180.0
texture = SubResource("ViewportTexture_vtaks")

[node name="FrameBuffer" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("ViewportTexture_u5sy4")
script = ExtResource("12_dinhu")
